tests/ui/fn/issue-3044.stderr
error[E0061]: this method takes 2 arguments but 1 argument was supplied
  --> $DIR/issue-3044.rs:3:23
   |
LL |       needlesArr.iter().fold(|x, y| {
   |  _______________________^^^^-
LL | |
LL | |     });
   | |______- argument #2 is missing
   |
note: method defined here
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
help: provide the argument
   |
LL |     needlesArr.iter().fold(|x, y| {
LL |
LL ~     }, /* f */);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0061`.
